# commonplace

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md
.cargo/: config
.github/workflows/: deploy.yml  test.yml
app/: .dockerignore  .gitattributes  .gitignore  package-lock.json  package.json  tsconfig.json  webpack.common.js  webpack.config.js
app/src/: index.html  index.tsx  theme.tsx  zettel.tsx
app/src/components/: button.tsx  centered.tsx  fade.tsx  flex.tsx  header.tsx  icon.tsx  new_zettel_button.tsx  scene.tsx  sidebar.tsx  zettel_entry.tsx
app/src/editor/: change_reporter.tsx  functionality.ts  history.ts  index.tsx  insert_menu.tsx  parser.ts  serializer.ts  view.tsx
app/src/editor/marks/: bold.ts  highlight.ts  italic.ts  link.ts  strikethrough.ts  subscript.ts  superscript.ts
app/src/editor/nodes/: divider.ts  doc.ts  heading.ts  image.ts  list.ts  paragraph.ts  text.ts
app/src/scenes/: home.tsx  search.tsx  zettel.tsx
commonplace/: Cargo.toml
commonplace/src/: content.rs  endpoint.rs  lib.rs  record.rs
server/: Cargo.toml
server/.cargo/: config
server/src/: main.rs
server/src/zettel/: index.rs  mod.rs  store.rs
src/: index.rs  lib.rs  main.rs  store.rs  zettel.rs
xtask/: Cargo.toml
xtask/src/: flags.rs  main.rs
